# xcoder

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: AGENT_MEMORY_IMPLEMENTATION.md  CLI_IMPLEMENTATION.md  DEVELOPMENT.md  RAGIFY_IMPLEMENTATION.md  SETUP_COMPLETE.md  WBS.md
scripts/: init-db.sql  setup.sh
tests/: README.md  conftest.py  test_cli.py
xcoder/: __init__.py  cli.py  logging_config.py
xcoder/commands/: __init__.py  agent.py  init.py  memory.py  ragify.py
xcoder/memory/: __init__.py  conversation.py  memory_manager.py
xcoder/rag/: __init__.py  chunker.py  embedder.py  vectorstore.py
xcoder/services/: __init__.py  ollama_service.py
xcoder/utils/: __init__.py  cli_utils.py
