[tool.poetry]
name = "xcoder"
version = "0.1.0"
description = "A local personal coding agent CLI powered by Ollama for autonomous code generation, research, and task execution"
authors = ["Bibek Gupta <your.email@example.com>"]
maintainers = ["Bibek Gupta <your.email@example.com>"]
readme = "README.md"
license = "MIT"
keywords = [
    "cli",
    "ai",
    "coding-agent",
    "ollama",
    "rag",
    "llm",
    "code-generation",
    "local-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
packages = [{include = "xcoder"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.7.0"
click = "^8.1.0,<8.1.4"
ollama = "^0.3.0"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
chromadb = "^0.5.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
tree-sitter = "^0.22.0"
rope = "^1.13.0"
libcst = "^1.4.0"
httpx = "^0.27.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
python-dotenv = "^1.0.0"
PyYAML = "^6.0.0"
prompt-toolkit = "^3.0.0"
questionary = "^2.0.0"
colorama = "^0.4.0"
loguru = "^0.7.0"
tenacity = "^8.1.0,!=8.4.0"
tqdm = "^4.66.0"
humanize = "^4.10.0"
watchdog = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
black = "^24.8.0"
ruff = "^0.6.0"
pre-commit = "^3.8.0"
ipython = "^8.27.0"

[tool.poetry.group.qdrant]
optional = true

[tool.poetry.group.qdrant.dependencies]
qdrant-client = "^1.11.0"

[tool.poetry.group.weaviate]
optional = true

[tool.poetry.group.weaviate.dependencies]
weaviate-client = "^4.7.0"

[tool.poetry.scripts]
xcoder = "xcoder.cli:app"

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/xcoder"
Documentation = "https://github.com/yourusername/xcoder#readme"
Repository = "https://github.com/yourusername/xcoder"
Issues = "https://github.com/yourusername/xcoder/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=xcoder --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]

[tool.coverage.run]
source = ["xcoder"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
